--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     def room_version = "2.2.0-rc01"
     def lifecycle_version = "2.1.0"
     def coroutines_version = "1.3.0"
+    def mockito_version = "2.7.22"
+    def mockk_version = "1.9.3"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -48,11 +50,20 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    
     implementation "androidx.room:room-runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
+    testImplementation "io.mockk:mockk:$mockk_version"
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
+
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestCompile "org.mockito:mockito-android:$mockito_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
