Add some instrumentation tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,12 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
 
     testImplementation "org.mockito:mockito-core:$mockito_version"
-    androidTestCompile "org.mockito:mockito-android:$mockito_version"
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
