--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -35,6 +41,7 @@ dependencies {
     def coroutines_version = "1.3.0"
     def mockito_version = "2.7.22"
     def mockk_version = "1.9.3"
+    def robolectric_version = "4.3"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -64,6 +71,8 @@ dependencies {
 
     testImplementation "org.mockito:mockito-core:$mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
