--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     def room_version = "2.2.0-rc01"
     def lifecycle_version = "2.1.0"
     def coroutines_version = "1.3.0"
+    def arch_testing = "1.1.1"
     def mockito_version = "2.7.22"
     def mockk_version = "1.9.3"
     def robolectric_version = "4.3"
@@ -65,6 +66,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
+
+    testImplementation "android.arch.core:core-testing:$arch_testing"
 
     testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
